Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    namespace: artemis
    app: artemis-deployment
  name: artemis-deployment
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8887
  selector:
    app: artemis-deployment
  sessionAffinity: None
  type: ClusterIP
